jenkins docker test:

--- a/pom.xml
+++ b/pom.xml
@@ -85,5 +85,6 @@
                 </includes>
             </resource>
         </resources>
+        <finalName>wsmhz-config</finalName>
     </build>
 </project>
