--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>config</name>
+    <name>${project.artifactId}</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -112,6 +112,6 @@
                 </includes>
             </resource>
         </resources>
-        <finalName>config</finalName>
+        <finalName>${project.artifactId}</finalName>
     </build>
 </project>
