--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   application:
-    name: @project.artifactId@
+    name: '@project.artifactId@'
   cloud:
     config:
       label: dev
       enabled: true
       server:
         git:
-          uri: https://github.com/wsmhz/wsmhz-config-repository.git
+          uri: ${GIT_URL:https://github.com/wsmhz/wsmhz-config-repository.git}
           username: ${GIT_USER:787740644@qq.com}
           password: ${GIT_PASS:123456}
         encrypt:
@@ -23,7 +23,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URL:http://eureka:8081/eureka}
+      defaultZone: ${EUREKA_URL:http://127.0.0.1:8081/eureka}
   instance:
     prefer-ip-address: true
     instanceId: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
